
              Remove nstring.h from exported interfaces.

              giftopnm: improve efficiency.

              pnmremap: fix loss of dithering when the map (and thus the
              output) has lower maxval than the input.  (Old code scales down
              to the new maxval before dithering).

              giftopnm: fix for unlikely case of a block smaller than a code.

              ilbmtoppm: fix some bug in interpreting ILBM input.
              (due to wrong pm_uintFromBigend16()).  From 10.46.

              ximtoppm: fix crash in command line processing.

              ppmrainbow: exit with proper exit status upon failure.
              
              ppmfade: eliminate reference to undeclared subroutine.

              ppmquantall: don't use 'set' to set Bourne shell variable.

              pnmtile: fix reference to arbitrary storage in option
              processing.  Introduced in 10.42.

              pamstereogram: fix tuple type in output file (and crash
              with -verbose) with -patfile .

              pamstereogram: fix uninitialized bytes per sample value.

              pbmtomacp: fix buffer overflow.

              libnetpbm (ppmd): fix: don't ignore failure to read font file.

              Fix: remove inclusion of pm_c_util.h from sshopt.h, which is
              an exported interface header file, whereas pm_c_util.h is not.

              Lots of changes to integer code, bit access, word access, etc.
              None functional.  Some speedup.

09.03.29 BJH  Release 10.46.00

              xwdtopnm: Add -cmapdump .

              xwdtopnm: Change maxval calculation for truecolor to fit
              X11 spec.  Now it's determined by bits_per_rgb.

              xwdtopnm: Add warning about 2 byte sample output.
         
              pnmcrop: fast path for PBM.

              pnmcrop: Use border file instead of original image to determine
              the background color (i.e. the color of added margins).
